# Dacia-Knowledge-Base

./: .gitattributes  .gitignore  .gitignore.7z  .jogger-payload.part00  .jogger-payload.part01  .jogger-payload.part01a  .jogger-payload.part01b  .jogger-payload.part01c  .jogger-payload.part01c1  .jogger-payload.part01c1a  .jogger-payload.part01c1a0  .jogger-payload.part01c1a1  .jogger-payload.part01c1b  .jogger-payload.part01c2  .jogger-payload.part02  .jogger-payload.part03  .jogger-payload.part04  .jogger-payload.part05  .jogger-payload.part06  .jogger-payload.part06a  .jogger-payload.part06b  .jogger-payload.part07  CHANGELOG.md  LICENSE  Pull.bat  README.md  ROADMAP.md  dacia_knowledge_base.db  pyproject.toml  upload.bat
.dkb/: export-main-v120-review.txt  record-v1.1.0-publication.patch.gz.b64
.github/: dependabot.yml
.jogger-archive-parts/: part-00.b85  part-01.b85  part-02.b85  part-03.b85
.jogger-tech-parts/: part-00.b64  part-01.b64  part-02.b64  part-03.b64  part-04.b64
Dokumentacja/: 00_START.md  01_MODELE.md  02_SILNIKI.md  03_SKRZYNIE_BIEGOW.md  04_REKOMENDACJE.md  Dacia.docx  ~$Dacia.docx
Excel/: Dacia_Sandero_Porownanie_Manual_Auto.xlsx  Porownanie_Dacia_Sandero_Stepway_2026.xlsx  Sandero_Projekt_v0.1.xlsx  Sandero_Projekt_v0.1_autoszerokosc.xlsx
project/: AI_CONTEXT.md  AI_WORKING_AGREEMENT.md  ATTRIBUTE_CATALOG.md  AUTONOMOUS_MAINTAINER.md  AUTONOMY_EVENTS.md  CATEGORY_TAXONOMY.md  CHANGELOG_PROJECT.md  DATA_MODEL.md  DATA_QUALITY_CHECKLIST.md  DATA_SCHEMA.md  DECISIONS.md  DECISION_TEMPLATE.md  DOCUMENTATION_STANDARD.md  DOCUMENT_TYPES.md  (+17 more)
(+751 files in other folders)
