[project]
name = "dacia-knowledge-base"
version = "0.1.0"
description = "Kompendium wiedzy o samochodach Dacia"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
lines-after-imports = 2